Fix misplaced logo in smaller viewports, IE11 wrapping in help section (#526)
* Remove dimensions attribute from logo

**Why**: USWDS applies dimensions via CSS, which conflicts with assigned attributes and may misplace the logo.

* Scale logo by pixel dimension

* Scale SVG naturally with width assigned in SVG

* Revert help header logo markup to demo

* Disable removeViewBox SVGO plugin

--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -72,15 +72,8 @@
 
 .usa-logo {
   .help-page & {
-    @include at-media('desktop') {
-      margin: 0;
-    }
-  }
-}
-
-.usa-logo a {
-  .help-page & {
-    vertical-align: middle;
+    display: flex;
+    align-items: center;
   }
 }
 
@@ -89,16 +82,17 @@
 }
 
 .usa-logo__help {
-  font-size: 0.813rem;
+  font-size: 0.8125rem;
   font-weight: bold;
   color: $navy;
   border-left: 1px solid $navy;
-  padding: 1px 0.813rem;
-  margin-left: 0.5rem;
+  margin-left: 0.75rem;
+  padding: 0.15625rem 0.75rem;
 }
 
 .usa-logo__img {
   .help-page & {
+    display: block;
     height: 0.875rem;
   }
 }
